feat(calculator2): modify input sequence and add documentation
- Change input order in Calculator class
- Add README.txt file
- Add code comments